app/assets/stylesheets/_vec.scss
/*** VEC Styles ***/

// Some overrides to look into more later
ul li:before {
  content:none;
}

#content ul.breadcrumbs li.active {
  margin: 0em;
}


// Search
.employer-login {
   appearance: none;
   background-color: #205493;
   border: 0;
   border-radius: .3rem;
   color: #fff;
   cursor: pointer;
   display: inline-block;
   font-family: "Source Sans Pro","Helvetica","Arial",sans-serif;
   font-size: 1rem;
   font-weight: 500;
   line-height: 0.2;
   margin-bottom: 0.5em;
   margin-right: 0.5em;
   margin-top: 0.5em;
   outline: none;
   padding: 1rem 2rem;
   text-align: center;
   text-decoration: none !important;
   width: auto;
   &:hover {
     color: #fff;
     background-color: #0071bc;
   }
   &:visited {
     color: #fff;
   }
}

.explanation {
  margin-right: 5px;
}

.header-bar {
  text-align: right;
  background: #f1f1f1;
  line-height: 1.2;
}

@media only screen and (max-width:480px) {
  .employer-login {
    display: block;
  }
  .header-bar {
    padding-left: .5em;
    text-align: center;
  }
}

.advanced-search {
  margin-bottom: 1em;
}

.overlay {
  z-index: 10000;
}

.reveal-modal #search_form {
  margin-bottom: 1em;
}
#search_form input[type="text"] {
  max-height: 2.6em;
}

.reveal-modal .close-reveal-modal {
  font-size: 1em;
  clear: both;
  text-decoration: none;
  color: $color-gray-dark;
  text-align: center;
  margin: 1em 0;
  position: relative;
  top: auto;
  display: block;
  padding: 1em 0;
  right: auto;
  width: 100%;
  bottom: auto;
}


// /*** VEC Styles ***/

.button.small.expand.button-margin-top {
  margin-top: 1.3em;
  padding: 0.65em .65em;
}
 
.card.information {
  background: rgba(0,0,0,.05);
  min-height: 11.2rem;
}
.card .description {
    text-transform: none;
    font-size: 1em;
    padding: .5em 0;
    color: color-primary-darkest;
}
// Make this smaller than va.scss because employer numbers are huge
.card .number {
    font-size: 2.3em;
}
#vec-user-nav.top-bar {
  background-color: $color-primary-darkest;
  border-bottom: $color-primary-alt-darkest solid 1px;
  opacity: 0.8;
  @include media($medium-screen) {
    height: auto;
  }
  ul .divider {
    border-right: $color-primary-darker solid 1px;
  }
  .top-bar-section ul {
    background-color: color-primary-alt-darkest;
  }
  ul li {
    list-style: none;
    a {
      background-color: $color-primary-darkest;
      color: #fff;
      font-size: 0.9rem;
      font-weight: initial;
      text-decoration: none;
      &:hover {
        background-color: $color-primary-darker;
      }
    }
  }
}

.row.full {
  width: 100%;
  max-width: 100%;
}

#search_form input[type="text"] {
  font-size: 1rem;
}

// short term less-ugly for alerts
.alert-box.notice {
  margin-bottom: 0px;
  font-weight: 400;
}

.alert-box.error_highlight {
  color: #112e51;
  background-color: #f9dede;
  border-color: #f9dede;
}

.job-row {
  margin-bottom: 2rem;
  .result {
    border-bottom: solid $color-gray-light 1px;
  }
  .feature-badge {
    margin: 1rem 0;
    width: 55px;
  }
  img {
    vertical-align: baseline;
  }
}

.row.pagination {
  margin-bottom: 2rem;
}

.panel.plain {
  border: none;
  margin-top: 1rem 0;
}

.no-margin {
  margin: 0px;
}

.card {
  &.job-card {
    margin-top: 1.25rem;
    padding: 1rem;
    background-color: $olso-gray;
    color: #fff;
    h4 {
      color: #fff;
    }
    img, p {
      float: left;
      display: inline-block;
      margin-bottom: 1rem;
    }
    .description {
      font-weight: 500;
      font-size: 1rem;
      font-height: 1px;
      line-height: 1.6;
      text-transform: none;
    }
  }
}

#content .cards a.long {
  height: 11em;
}

// Utilities
.align-right {
  float: right;
  text-align: right;
}
.borderless {
  border: none
}

pre {
 white-space: pre-wrap;       /* css-3 */
 white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
 white-space: -pre-wrap;      /* Opera 4-6 */
 white-space: -o-pre-wrap;    /* Opera 7 */
 word-wrap: break-word;       /* Internet Explorer 5.5+ */
}

.form-section {
  padding: 2rem;
  margin: 0 0 2rem;
  border: 1px solid #eee;

  h3 {
    &.no-margin {margin: 0; padding: 0 0 1rem;}
  }
  .required {
    margin: 0;
    &.field {font-size: 1em;}
    &.federal {
      margin-top:1em;
      color: $color-primary-darker;
      font-size: .75em;
      text-align: right;
      padding: .2em;
      display: inline-block;
      float:right;
    }
    &.message {
      font-size: .75em;
      padding: .5em;
      float: right;
    }
  }
}

.call-out {
  background: $color-primary-alt-lightest;
  padding: 2em;
  clear: both;
  margin: 0 0 1.5em 0;
  p {margin-bottom: 0; padding-bottom: .5em}
  p:nth-child(1) {
    font-size: 1em;
    color: #333;
    padding-bottom: inherit;
  }
  h3 {@media #{$small} {font-size: 1.65em;}}
  ul {
    margin: 0 0 .5em 1.5em; padding: 0;
    li {
      list-style: square;
      margin: 0;
    }
  }
}

fieldset {
  border: none;
  margin: 0;
  padding: 0 0;

  legend {
    margin-bottom: 1.25rem;
  }
  label {}
}

.button {
  white-space: normal;

  &.primary {
    padding: 1rem 2rem;
    margin-left: auto;
    margin-right: auto;

  }

  &.button-left {
    margin: 0 0.5em 0 1em;
  }

  &.button-right {
    margin: 0 1em 0 0.5em;
  }
}


// Action banner

.action-bar {
  text-align: left;
  padding: 1rem;
  background: #f1f1f1;
  a.button {
    margin: 0 0 0 20px; padding: 0;
    background: #2e8540 !important;
    border-bottom: none !important;
  }
}

// Veteran Search Results
.search-results {
  ol {
    list-style: none;
    margin: 0;
  }
  .veteran_location {
    margin-top: 1em;
  }

  h6 {
    font-weight: 700;
    font-size: 1em;
    font-family: 'Open Sans', Helvetica, Arial, sans-serif;
  }
  .result {
    border-bottom: 1px solid $olso-gray;
    margin-bottom: 1em;
  }
  .result:last-child {
    border-bottom: none;
  }
}


// VA Crisis Line 

.va-crisis-line {
  &:hover, &:focus {
    background-color: $color-gold;
    color: rgb(0,0,0);
  }
}

//========================================================
// These styles override USWDS styles for visual
// compatibility with current vets.gov look
//========================================================
select {
  height: auto;
}


//========================================================
// These styles override Foundation styles
// for visual compatibility with the current vets.gov look
// Long term goal is to drop Foundation.
//========================================================

$base-font-size: rem(16px);

body {
  font-size: $base-font-size;
}

.accordion .accordion-navigation > a, 
.accordion dd > a {
  font-size: inherit;
  font-family: inherit;
}

p, ul, ol, dl {
  font-size: inherit;
}

h1, h2, h3, h4, h5, h6 {
  line-height: 1.5;
}

h1 {
  font-weight: bold;
  font-size: rem(32px);
  margin: 0.67em 0;
}

.section.one {
  color: $color-base;

  button {
    font-size: inherit;
  }
  select, input, button {
    height: auto;
  }
  label {
    font-size: 1.5rem;
  }

  #search-button {
    height: 4.8rem;
  }
  select {
    background-size: 3rem;
    background-image: url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZlcnNpb249IjEuMSIgeD0iMTJweCIgeT0iMHB4IiB3aWR0aD0iMjRweCIgaGVpZ2h0PSIzcHgiIHZpZXdCb3g9IjAgMCA2IDMiIGVuYWJsZS1iYWNrZ3JvdW5kPSJuZXcgMCAwIDYgMyIgeG1sOnNwYWNlPSJwcmVzZXJ2ZSI+PHBvbHlnb24gcG9pbnRzPSI1Ljk5MiwwIDIuOTkyLDMgLTAuMDA4LDAgIi8+PC9zdmc+");
    background-position: 100% 50%;
  }

}

#search_form input[type="text"] {
  font-size: inherit;
  max-height: inherit;
}

table tr th,
table tr td,
table thead tr th,
table thead tr td {
  font-size: inherit;
}

dl dt, dl dd {
  margin-bottom: 0;
}

p, ul, ol, dl {
  line-height: inherit; 
}

button {
  position: static;
}

// Global Styles that should be added to va_common at some point

.va-notice--banner {
  p {
    font-weight: 300;
  }
}

h1:first-child {
    margin-top: 0;
}

.section.one {
    padding: 0;
    p:nth-child(1), p:first-of-type {
      color: #205493;
      letter-spacing: normal;
      font-size: 1.25em;
    }
}

.usa-button {
  &.sign-in {
    width: 100%;
  }
}

form {
  max-width: 100%;
  input[type="submit"] {
    font-size: 1em;
    margin-bottom: 0;
    &.page-end {
      margin-bottom: 1em;
    }
  }
  .usa-button, button[type="button"], button[type="submit"] {
    margin: 0;
  }
  legend {
    font-size: 2rem;
    font-weight: 700;
  }
}

